--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNthAczAX14c7Rj5Pr+UI+T",
+      "authorship_tag": "ABX9TyMlf3DKCGNyTZaAZ5fVAqGP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -846,6 +846,286 @@
       ],
       "metadata": {
         "id": "qwhcnRXi33OY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Boas Práticas\n",
+        "\n",
+        "* Letras Maiúsculas\n",
+        "\n",
+        "Você pode notar que sempre colocamos as sentenças `SELECT` e `FROM`, enquantoo deixamos os nomes das tabelas e colunas em letras minúsculas. Isso é uma convenção de formatação dentro do SQL, e você irá reparar isso na maioria, se não todos, os lugares que você for pegar referências de SQL.\n",
+        "\n",
+        "Essa prática de deixar os comandos em letras maiúsculas e o restante da query em letras minúsculas faz com que as queries sejam mais fáceis de ler, o que vai ser muito importante quando você começar a ler e escrever queries mais complexas.\n",
+        "\n",
+        "Por enquanto, é só uma boa prática que você já pode ir se habituando a fazer!\n",
+        "\n",
+        "* Evite Espaços em Tabelas e Nomes de Variáveis\n",
+        "\n",
+        "Assim como já costumamos fazer quando estamos manipulando datasets no pandas aqui no Jupyter Notebook, dê preferência por usar underline (_) e evite deixar espaços em brancos nos nomes de suas tabelas e variáveis.\n",
+        "\n",
+        "Trabalhar com esses espaços pode ser um pouco incômodo com SQL. Por exemplo, no Postgres, se você tiver espaços entre os nomes de colunas ou tabelas, você precisa se referir a esses elementos com aspas duplas entre eles.\n",
+        "\n",
+        "`SELECT * FROM \"Vendas Agosto\"`\n",
+        "\n",
+        "Ao invés do bom e velho:\n",
+        "\n",
+        "`SELECT * FROM vendas_agosto`\n",
+        "\n",
+        "Na maioria dos ambientes, você pode ver chaves ao invés de aspas duplas, como por exemplo:\n",
+        "\n",
+        "`SELECT * FROM [Vendas Agosto]`\n",
+        "\n",
+        "* Use espaços nas Queries\n",
+        "\n",
+        "Queries em SQL ignoram espaços, portanto, podemos adicionar quantos espaços e até linhas em branco quisermos, e isso não afetará as queries.\n",
+        "\n",
+        "Por exempolo:\n",
+        "\n",
+        "`SELECT id FROM vendas_agosto`\n",
+        "\n",
+        "É equivalente a:\n",
+        "\n",
+        "`SELECT id`\n",
+        "\n",
+        "`FROM vendas_agosto`\n",
+        "\n",
+        "Mas é claro, se utilize disso para fazer queries mais legíveis e fáceis de entender, mas não exagere nos espaços em branco.\n",
+        "\n",
+        "* SQL não é *Case Sensitive*\n",
+        "\n",
+        "Em Python, sabemos que `df` é diferente de `Df`, que é diferente de `DF`. Isso acontece pois Python é *case sensitive*, ou seja, diferencia maiúsculas de minúsculas. O mesmo não é verdade para SQL.\n",
+        "\n",
+        "As seguintes queries trariam os mesmos resultados:\n",
+        "\n",
+        "`SELECT id`\n",
+        "\n",
+        "`FROM vendas_agosto`\n",
+        "\n",
+        "É igual a:\n",
+        "\n",
+        "`select id`\n",
+        "\n",
+        "`from vendas_agosto`\n",
+        "\n",
+        "Que é  igual a:\n",
+        "\n",
+        "`SeLeCt iD`\n",
+        "\n",
+        "`FrOm VeNdAs_AgOsTo`\n",
+        "\n",
+        "Entretanto, mais uma vez, o ideal é que você se mantenha ao padrão que mostramos anteriormente.\n",
+        "\n",
+        "\n",
+        "* Ponto e Vírgula (;)\n",
+        "A depender do ambiente de SQL que você esteja utilizando, a sua query pode precisar de ponto e vírgula ao final para ser executada.\n",
+        "\n",
+        "Apesar disso, nem todos os ambientes são assim, com alguns sendo mais flexíveis com essa regra. Entretanto, é considerada uma boa prática adicionar ponto e vírgula ao final de suas queries.\n",
+        "\n",
+        "Exemplo, completo, utilizando das boas práticas mencionadas até aqui:\n",
+        "\n",
+        "`SELECT id`\n",
+        "\n",
+        "`FROM vendas_agosto;`\n"
+      ],
+      "metadata": {
+        "id": "vu-1ukH94Iqe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## FROM\n",
+        "\n",
+        "O comando FROM irá indicar, como o próprio nome sugere, de onde iremos tirar os dados. Ele se refere à Tabela de origem dos dados.\n",
+        "\n",
+        "Por exemplo, vamos supor que temos as tabelas:\n",
+        "\n",
+        "`vendas`, `funcionarios`, `estoque`\n",
+        "\n",
+        "e queremos selecionar todos os dados da tabela `vendas`.\n",
+        "\n",
+        "Nossa query seria:\n",
+        "\n",
+        "`SELECT *`\n",
+        "\n",
+        "`FROM vendas`\n",
+        "\n",
+        "Para puxar dados de uma tabela diferente, basta mudar a tabela:\n",
+        "\n",
+        "`SELECT *`\n",
+        "\n",
+        "`FROM funcionarios`\n"
+      ],
+      "metadata": {
+        "id": "KZxtMFJh4ONG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## WHERE\n",
+        "\n",
+        "O comando `WHERE` vai ser utilizado para fazer um filtro, onde os dados que serão puxados deverão obedecer à condição estabelecida por ele.\n",
+        "\n",
+        "Por exemplo:\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE neighbourhood_group = 'Manhattan'`\n",
+        "\n",
+        "Acima, como nossa condição é um String, percebemos que precisamos utilizar as aspas. Em alguns sistemas, aspas duplas também será possíveis.\n",
+        "\n",
+        "Quando a condição é um valor numérico, não utilizaremos as aspas.\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE minimum_nights = 2`\n",
+        "\n",
+        "Abaixo, podemos ver uma lista de operadores que podemos utilizar quando estivermos trabalhando com o `WHERE`:\n",
+        "\n",
+        "* `=` - Igual\n",
+        "* `>` - Maior\n",
+        "* `<` - Menor\n",
+        "* `>=` - Maior ou Igual\n",
+        "* `<=` - Menor ou Igual\n",
+        "* `<>` - Não igual (Em algumas sistemas podemos utilizar `!=`)\n",
+        "* `BETWEEN` - Entre um certo range\n",
+        "* `LIKE` - Busca por um padrão\n",
+        "* `IN` - Especifica vários possíveis valores dentro de uma coluna"
+      ],
+      "metadata": {
+        "id": "MqSql3Kr4nIG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ORDER BY\n",
+        "\n",
+        "Como o próprio nome sugere, o `ORDER BY` é usado para ordenar os resultados da nossa query. Por padrão, os resultados são colocados em ordem ascendente, mas podem ser colocados em ordem descendente, usando o comando `DESC`.\n",
+        "\n",
+        "Query de exemplo:\n",
+        "\n",
+        "`SELECT *`\n",
+        "\n",
+        "`FROM data`\n",
+        "\n",
+        "`ORDER BY price DESC`"
+      ],
+      "metadata": {
+        "id": "gm69BAB24pj-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## LIMIT\n",
+        "\n",
+        "Mais uma vez, lembramos o quanto o SQL pode ser literal. O `LIMIT` nada mais é do que um limite. Podemos limitar o número de linhas que vamos receber da nossa Query.\n",
+        "\n",
+        "Vamos supor que queremos apenas 10 entradas do nosso conjunto de imóveis em Manhattan, podemos fazer a seguinte query:\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE neighbourhood_group = 'Manhattan'`\n",
+        "\n",
+        "`LIMIT 10;`"
+      ],
+      "metadata": {
+        "id": "b2jO5EXj4sC-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operadores Aritméticos\n",
+        "\n",
+        "O SQL também nos permite trabalhar com operadores aritméticos. Aqui, vamos utilizar dos mesmos que já conhecemos em Python.\n",
+        "\n",
+        "* `+` - Adição\n",
+        "* `-` - Subtração\n",
+        "* `*` - Multiplicação\n",
+        "* `/` - Divisão\n",
+        "* `%` - Modulo\n",
+        "\n",
+        "Podemos fazer uso desses operadores tanto no `SELECT`, para que retorne uma nova coluna de consulta com a nossa operação, quanto no `WHERE` para satisfazer determinada condição. Também podemos fazer as duas coisas."
+      ],
+      "metadata": {
+        "id": "j2GX7y3F4uF1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operadores Lógicos\n",
+        "\n",
+        "Mais uma vez, assim como no Python, podemos utilizar operadores lógicos em nossas queries para diferentes funções.\n",
+        "\n",
+        "Segue abaixo uma lista dos operadores lógicos e suas funções:\n",
+        "\n",
+        "* `ALL` - True se todos os valores da query satisfazem a condição\n",
+        "\n",
+        "Pode ser usada, por exemplo, para puxar todas as entradas de uma coluna que estão preenchidas.\n",
+        "\n",
+        "`SELECT ALL name`\n",
+        "\n",
+        "`FROM data`\n",
+        "\n",
+        "`WHERE TRUE;`\n",
+        "\n",
+        "\n",
+        "* `AND` - True se todas as condições separadas por AND são verdadeiras\n",
+        "\n",
+        "A ideia aqui é usar dentro do WHERE mais de uma condição a ser obedecida.\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE neighbourhood_group = 'Manhattan' AND price < 100;`\n",
+        "\n",
+        "\n",
+        "* `OR` - True se alguma das condições separadas por OR são verdadeiras\n",
+        "\n",
+        "Da mesma formas que colocamos condições com o OR no WHERE, podemos utilizar o OR.\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE price <100 AND neighbourhood_group = 'Manhattan' OR neighbourhood_group= 'Brooklyn';`\n",
+        "\n",
+        "* `NOT` - Mostra regristros caso a condição não seja verdadeira\n",
+        "\n",
+        "Já o NOT, podemos utilizar para excluir registros de nossa busca.\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE NOT neighbourhood_group = 'Manhattan' AND price < 100;`\n",
+        "\n",
+        "* `IN` - True se o operador está dentro da lista de expressões\n",
+        "\n",
+        "O IN nos permite buscar vários valores dentro de um WHERE. Pode ser um atalho para utilizar vários OR\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE neighbourhood IN ('Astoria', 'Long Island City', 'Flatbush', 'Jackson Heights');`\n",
+        "\n",
+        "Também poderíamos acrescentar um NOT a esse comando para excluir entradas com esses valores.\n",
+        "\n",
+        "* `BETWEEN` - True se o operador estiver dentro do range de comparação\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE price BETWEEN 100 and 200;`\n",
+        "\n",
+        "* `LIKE` - True se o operador é compatível a um padrão\n",
+        "Com esse operador conseguimos investigar mais a fundo nosso conjunto de dados. Esse operador normalmente é utilizado junto do sinal `%` e `_`. Por exemplo, para retornar todos os donos de anúncios que começam com a letra A:\n",
+        "\n",
+        "`SELECT * FROM data`\n",
+        "\n",
+        "`WHERE host_name LIKE 'A%'`"
+      ],
+      "metadata": {
+        "id": "tLAI520d4ww-"
       }
     }
   ]
