--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlf3DKCGNyTZaAZ5fVAqGP",
+      "authorship_tag": "ABX9TyN8yQZoNC2xcXt6MKGZN+cZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1126,6 +1126,33 @@
       ],
       "metadata": {
         "id": "tLAI520d4ww-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: O que é SQL e por que preciso saber disso?**\n",
+        "\n",
+        "SQL significa Structured Query Language. SQL é uma linguagem usada para se comunicar com bancos de dados. De acordo com a ANSI (American National Standards Institute), é a linguagem padrão para sistemas de gerenciamento de bancos de dados relacionais.\n",
+        "\n",
+        "Através de statements, SQL é utilizado para para realizar tarefas como atualizar, retirar ou ler dados em um banco de dados. Alguns Sistemas de Gerenciamento de Banco de Dados que usam SQL são: Oracle, Sybase, Microsoft SQL Server, Microsoft Access, Ingres, etc.\n",
+        "\n",
+        "Apesar da maioria dos sistemas de banco de dados usarem SQL, a maioria deles têm alguma extensão proprietária, que geralmente é usada apenas em seu sistema.De qualquer forma, os comandos padrão para SQL como Select, Insert, Update, Delete, Create, e Droppodem ser usados para fazer basicamente qualquer coisa com um banco de dados.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Cheat Sheet](https://www.dataquest.io/blog/sql-cheat-sheet/)\n",
+        "\n",
+        "[Entity Relationship Diagram](https://www.lucidchart.com/pages/er-diagrams)\n",
+        "\n",
+        "[MER e DER - DevMedia](https://www.devmedia.com.br/mer-e-der-modelagem-de-bancos-de-dados/14332)\n",
+        "\n",
+        "[Como fazer um Diagrama Entidade Relacionamento](https://www.lucidchart.com/pages/pt/como-fazer-um-diagrama-entidade-relacionamento)\n",
+        "\n",
+        "[Entenda o Modelo Entidade Relacionamento](https://www.estrategiaconcursos.com.br/blog/modelo-entidade-relacionamento/)"
+      ],
+      "metadata": {
+        "id": "CKpr3FqO5dsm"
       }
     }
   ]
