--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8yQZoNC2xcXt6MKGZN+cZ",
+      "authorship_tag": "ABX9TyOra+Ev3pgNbZLzSBW0OL1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -802,7 +802,7 @@
         "id": "yIKnRVQp3zqx",
         "outputId": "5aba23ab-9ff1-4543-a184-b7d8334427c5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,6 +1153,23 @@
       ],
       "metadata": {
         "id": "CKpr3FqO5dsm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 2 : SQL vs NoSQL**\n",
+        "\n",
+        "NoSQL Cheat Sheet for Dummies\n",
+        "\n",
+        "O que são Bancos de Dados NoSQL? - Microsoft Azure\n",
+        "\n",
+        "What is NoSQL - MongoDB\n",
+        "\n",
+        "Introdução aos Bancos de Dados NoSQL - DevMedia"
+      ],
+      "metadata": {
+        "id": "DqJm815l-hx_"
       }
     }
   ]
