--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOra+Ev3pgNbZLzSBW0OL1Q",
+      "authorship_tag": "ABX9TyNC7qCjlFIB/ZDD9gOWUgac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1160,13 +1160,13 @@
       "source": [
         "## **Extra 2 : SQL vs NoSQL**\n",
         "\n",
-        "NoSQL Cheat Sheet for Dummies\n",
+        "[NoSQL Cheat Sheet for Dummies](https://www.dummies.com/category/articles/big-data-33578/)\n",
         "\n",
-        "O que são Bancos de Dados NoSQL? - Microsoft Azure\n",
+        "[O que são Bancos de Dados NoSQL? - Microsoft Azure](https://azure.microsoft.com/pt-br/resources/cloud-computing-dictionary/what-is-nosql-database/)\n",
         "\n",
-        "What is NoSQL - MongoDB\n",
+        "[What is NoSQL - MongoDB](https://www.mongodb.com/resources/basics/databases/nosql-explained)\n",
         "\n",
-        "Introdução aos Bancos de Dados NoSQL - DevMedia"
+        "[Introdução aos Bancos de Dados NoSQL - DevMedia](https://www.devmedia.com.br/introducao-aos-bancos-de-dados-nosql/26044)"
       ],
       "metadata": {
         "id": "DqJm815l-hx_"
