--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC7qCjlFIB/ZDD9gOWUgac",
+      "authorship_tag": "ABX9TyNckNVxN1uYDOFSA74jMGw8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1170,6 +1170,24 @@
       ],
       "metadata": {
         "id": "DqJm815l-hx_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Relacionamentos entre tabelas**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "Notebook de apoio\n",
+        "SQL Cheat Sheet\n",
+        "Entity Relationship Diagram\n",
+        "MER e DER - DevMedia\n",
+        "Como fazer um Diagrama Entidade Relacionamento\n",
+        "Entenda o Modelo Entidade Relacionamento"
+      ],
+      "metadata": {
+        "id": "zm6Y8vdD_sKn"
       }
     }
   ]
