--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEnwq7nh36EUCNLMW2bSYb",
+      "authorship_tag": "ABX9TyPrzUQ/YFOnaOCUf1st3Goq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1179,15 +1179,15 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "SQL Cheat Sheet\n",
+        "[SQL Cheat Sheet](https://www.dataquest.io/blog/sql-cheat-sheet/)\n",
         "\n",
-        "Entity Relationship Diagram\n",
+        "[Entity Relationship Diagram](https://www.lucidchart.com/pages/er-diagrams)\n",
         "\n",
-        "MER e DER - DevMedia\n",
+        "[MER e DER - DevMedia](https://www.devmedia.com.br/mer-e-der-modelagem-de-bancos-de-dados/14332)\n",
         "\n",
-        "Como fazer um Diagrama Entidade Relacionamento\n",
+        "[Como fazer um Diagrama Entidade Relacionamento](https://www.lucidchart.com/pages/pt/como-fazer-um-diagrama-entidade-relacionamento)\n",
         "\n",
-        "Entenda o Modelo Entidade Relacionamento"
+        "[Entenda o Modelo Entidade Relacionamento](https://www.estrategiaconcursos.com.br/blog/modelo-entidade-relacionamento/)"
       ],
       "metadata": {
         "id": "zm6Y8vdD_sKn"
