--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrzUQ/YFOnaOCUf1st3Goq",
+      "authorship_tag": "ABX9TyMC7pYVRd9q+bRoJCuljeDS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1191,6 +1191,23 @@
       ],
       "metadata": {
         "id": "zm6Y8vdD_sKn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: SQL Online IDE**\n",
+        "\n",
+        "Nessa aula, aprendemos a subir os dados para a nossa IDE, e configurar nosso ambiente.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
+      ],
+      "metadata": {
+        "id": "_u8Obpp4AvOc"
       }
     }
   ]
