--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC7pYVRd9q+bRoJCuljeDS",
+      "authorship_tag": "ABX9TyPEU4M+7IPHjS7Qvx7SLfGb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1196,7 +1196,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Extra: SQL Online IDE**\n",
+        "## **Extra 3: SQL Online IDE**\n",
         "\n",
         "Nessa aula, aprendemos a subir os dados para a nossa IDE, e configurar nosso ambiente.\n",
         "\n",
@@ -1208,6 +1208,21 @@
       ],
       "metadata": {
         "id": "_u8Obpp4AvOc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Boas Práticas em SQL\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "SQL Online IDE\n",
+        "Inside Airbnb - Dados Originais\n",
+        "Notebook de apoio"
+      ],
+      "metadata": {
+        "id": "W9_zjhTrJ9yh"
       }
     }
   ]
