--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEU4M+7IPHjS7Qvx7SLfGb",
+      "authorship_tag": "ABX9TyPIsi6MPfJXkdTs0Sc3RGWJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1213,13 +1213,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Boas Práticas em SQL\n",
+        "## **Extra 4: Boas Práticas em SQL**\n",
         "\n",
         "Links úteis:\n",
         "\n",
         "SQL Online IDE\n",
-        "Inside Airbnb - Dados Originais\n",
-        "Notebook de apoio"
+        "\n",
+        "Inside Airbnb - Dados Originais\n"
       ],
       "metadata": {
         "id": "W9_zjhTrJ9yh"
