--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIsi6MPfJXkdTs0Sc3RGWJ",
+      "authorship_tag": "ABX9TyPIwqq8uAkcb8RogICG85b/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1217,12 +1217,25 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "SQL Online IDE\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
         "\n",
-        "Inside Airbnb - Dados Originais\n"
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
       ],
       "metadata": {
         "id": "W9_zjhTrJ9yh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SELECT e FROM\n",
+        "Links úteis:\n",
+        "\n",
+        "SQL Online IDE\n",
+        "Inside Airbnb - Dados Originais\n"
+      ],
+      "metadata": {
+        "id": "nnnM5qGCLRMF"
       }
     }
   ]
