--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIwqq8uAkcb8RogICG85b/",
+      "authorship_tag": "ABX9TyNlNRGGIAenzqvKeoyqrYZ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1228,14 +1228,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "SELECT e FROM\n",
+        "## **Extra 5: SELECT e FROM**\n",
+        "\n",
         "Links úteis:\n",
         "\n",
-        "SQL Online IDE\n",
-        "Inside Airbnb - Dados Originais\n"
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n",
+        "\n"
       ],
       "metadata": {
         "id": "nnnM5qGCLRMF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 6: WHERE**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "SQL Online IDE\n",
+        "\n",
+        "Inside Airbnb - Dados Originais\n"
+      ],
+      "metadata": {
+        "id": "jLhgUeS9Lg3F"
       }
     }
   ]
