--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlNRGGIAenzqvKeoyqrYZ1",
+      "authorship_tag": "ABX9TyPgOEdpW8aUtBjiy0T1j+X1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1248,12 +1248,28 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "SQL Online IDE\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
         "\n",
-        "Inside Airbnb - Dados Originais\n"
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n",
+        "\n"
       ],
       "metadata": {
         "id": "jLhgUeS9Lg3F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 6: ORDER BY**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)"
+      ],
+      "metadata": {
+        "id": "hjEQzYuvLwS3"
       }
     }
   ]
