--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgOEdpW8aUtBjiy0T1j+X1",
+      "authorship_tag": "ABX9TyN73PRlEi741jfaMcvCP+3b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1270,6 +1270,36 @@
       ],
       "metadata": {
         "id": "hjEQzYuvLwS3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 7: LIMIT**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
+      ],
+      "metadata": {
+        "id": "xNKY1TnLQYMk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Operadores Aritméticos\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
+      ],
+      "metadata": {
+        "id": "zqOHS1ctQ3XO"
       }
     }
   ]
