--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN73PRlEi741jfaMcvCP+3b",
+      "authorship_tag": "ABX9TyP00CnPh0Hn2XRF8qVxFiZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1300,6 +1300,21 @@
       ],
       "metadata": {
         "id": "zqOHS1ctQ3XO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Operadores Lógicos\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
+      ],
+      "metadata": {
+        "id": "R0ncNtF4RC8N"
       }
     }
   ]
