--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP00CnPh0Hn2XRF8qVxFiZF",
+      "authorship_tag": "ABX9TyOUSPy3TvX6VGrXUApx2cZr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1305,7 +1305,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Operadores Lógicos\n",
+        "## **Operadores Lógicos**\n",
         "\n",
         "Links úteis:\n",
         "\n",
@@ -1315,6 +1315,21 @@
       ],
       "metadata": {
         "id": "R0ncNtF4RC8N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Como se Aprimorar**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Online IDE](https://insideairbnb.com/get-the-data/)\n",
+        "\n",
+        "[Inside Airbnb - Dados Originais](https://insideairbnb.com/get-the-data/)\n"
+      ],
+      "metadata": {
+        "id": "zZ4WNpKXSB2e"
       }
     }
   ]
