--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUSPy3TvX6VGrXUApx2cZr",
+      "authorship_tag": "ABX9TyObhJIV1X9f35nxYUNOUcQt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1330,6 +1330,21 @@
       ],
       "metadata": {
         "id": "zZ4WNpKXSB2e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Instalando o SQL Server Developer**\n",
+        "\n",
+        "Nessa aula, nosso convidado especialista Joviano Silveira ensina como preparar o seu ambiente para que possamos continuar evoluindo em nossas habilidades com SQL.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[SQL Server Developer Download](https://www.microsoft.com/pt-br/sql-server/sql-server-downloads)"
+      ],
+      "metadata": {
+        "id": "qOdn_vWVTOHT"
       }
     }
   ]
