--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObhJIV1X9f35nxYUNOUcQt",
+      "authorship_tag": "ABX9TyMLowPM/YOHx3MFOyGUPhkO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1345,6 +1345,21 @@
       ],
       "metadata": {
         "id": "qOdn_vWVTOHT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Instalando o SQL Server Management Studio**\n",
+        "\n",
+        "Nessa aula, nosso convidado especialista Joviano Silveira ensina como preparar o seu ambiente para que possamos continuar evoluindo em nossas habilidades com SQL.\n",
+        "\n",
+        "Links úteis\n",
+        "\n",
+        "[SQL Server Management Studio Download](https://learn.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms?view=sql-server-ver15)"
+      ],
+      "metadata": {
+        "id": "U_v8PYiIXF-3"
       }
     }
   ]
