--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLowPM/YOHx3MFOyGUPhkO",
+      "authorship_tag": "ABX9TyN1dI8ClZExOQ9lDAkdAIxE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1360,6 +1360,271 @@
       ],
       "metadata": {
         "id": "U_v8PYiIXF-3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: SQL com Joviano Silveira**\n",
+        "\n",
+        "Joviano Silveira no Instagram\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:09:39\tHebert:\tnão souperu\n",
+        "\n",
+        "00:09:50\tHebert:\t#naosouperu\n",
+        "\n",
+        "00:10:03\tGetúlio Pires:\t#naosouperu\n",
+        "\n",
+        "00:12:07\tJoviano Silveira:\tvc é o cara man!\n",
+        "\n",
+        "00:14:26\tFelipe Santos:\tEstamos ouvindo Joviano\n",
+        "\n",
+        "00:15:24\tValmir Junior:\tShow\n",
+        "\n",
+        "00:15:46\tLuan Rodrigues:\t#NAOSOUPERU\n",
+        "\n",
+        "00:15:47\tBorges Paula:\tboa noite a todos\n",
+        "\n",
+        "00:16:15\tFelipe Santos:\t#naosouperu\n",
+        "\n",
+        "00:17:03\tAbraços:\t🐼🐼\n",
+        "\n",
+        "00:19:38\tAlessandra Antonieli:\tEstamos vendo perfeitamente.\n",
+        "\n",
+        "00:19:58\tBorges:\tBoa Noite - Borges\n",
+        "\n",
+        "00:20:02\tIvan Monma:\t#nãosouperu\n",
+        "\n",
+        "00:20:20\tAbraços:\t🤍🖤🖤🖤\n",
+        "\n",
+        "00:20:32\tWerley A. Resende:\t#nãosouperu\n",
+        "\n",
+        "00:22:48\tLuan Rodrigues:\tFicou mudo pra mais alguém?\n",
+        "\n",
+        "00:23:09\tAlessandra Antonieli:\tnão, estou ouvindo bem.\n",
+        "\n",
+        "00:23:18\tWilton Ramos:\taqui ta normal\n",
+        "\n",
+        "00:23:39\tIvan Monma:\tpra mim normal tbém\n",
+        "\n",
+        "00:23:47\tLuan Rodrigues:\tbeleza. Valeu\n",
+        "\n",
+        "00:33:33\tWilton Ramos:\tsim\n",
+        "\n",
+        "00:33:44\tAlessandra Antonieli:\tSim\n",
+        "\n",
+        "00:36:00\tFelipe Santos:\tKanban na área de trabalho\n",
+        "\n",
+        "00:42:09\tBorges:\tF5 prof\n",
+        "\n",
+        "00:43:46\tWilton Ramos:\tburocracia é a cara do serviço público\n",
+        "\n",
+        "00:46:05\tAbraços:\tCurso SQL do Jovi é fora de série. Muito bom!\n",
+        "\n",
+        "00:53:34\tCarlos Melo:\tMissão papai, vou só levar a mamadeira noturna e já volto!\n",
+        "\n",
+        "00:53:55\tWilton Ramos:\tsim\n",
+        "\n",
+        "00:53:58\tAlessandra Antonieli:\tsim\n",
+        "\n",
+        "00:59:31\tFelipe Santos:\tSim\n",
+        "\n",
+        "00:59:31\tJoao Moura:\tok\n",
+        "\n",
+        "00:59:38\tBorges:\tok\n",
+        "\n",
+        "00:59:57\tValmir Junior:\t9\n",
+        "\n",
+        "01:00:00\tVinicius Boscoa:\t9\n",
+        "\n",
+        "01:00:05\tJoao Moura:\t9\n",
+        "\n",
+        "01:00:27\tCarlos Sant ' Anna:\tz\n",
+        "\n",
+        "01:00:28\tWerley A. Resende:\tz\n",
+        "\n",
+        "01:00:29\tTiago Morais:\tZ\n",
+        "\n",
+        "01:00:31\tDiego:\tZ\n",
+        "\n",
+        "01:00:38\tDaniel:\tz\n",
+        "\n",
+        "01:00:44\tRafael Ferreira de Souza:\tz\n",
+        "\n",
+        "01:00:57\tMaurício Barros:\tA\n",
+        "\n",
+        "01:00:58\tVinicius Boscoa:\tA\n",
+        "\n",
+        "01:01:36\tValmir Junior:\teu sou B\n",
+        "\n",
+        "01:07:49\tCarlos Melo:\tNa área!\n",
+        "\n",
+        "01:17:51\tCristiane E Leite:\tBoa noite!\n",
+        "\n",
+        "01:19:06\tMaurício Barros:\tTem diferença sim.\n",
+        "\n",
+        "01:19:21\tMaurício Barros:\tpor isso chama script\n",
+        "\n",
+        "01:19:53\tMaurício Barros:\té como um roteiro\n",
+        "\n",
+        "01:19:55\tAbraços:\tIsso mesmo. Boa, script\n",
+        "\n",
+        "01:20:17\tAbraços:\tReceita!!\n",
+        "\n",
+        "01:21:31\tCarlos Melo:\tsempre\n",
+        "\n",
+        "01:23:46\tFelipe Santos:\tSQL é case sensitive?\n",
+        "\n",
+        "01:23:55\tCarlos Melo:\tCara\n",
+        "\n",
+        "01:24:50\tCarlos Melo:\tManja absurdamente muito\n",
+        "\n",
+        "01:27:11\tFelipe Santos:\tPerfeito!\n",
+        "\n",
+        "01:27:30\tGetúlio Pires:\tJoviano quando vou baixar relatório SQL na empresa a data vem ao contrário, exemplo: 20210921. Tem como reverter isso?\n",
+        "\n",
+        "01:27:45\tCristiane E Leite:\tFaço todo dia\n",
+        "\n",
+        "01:29:28\tAbraços:\tkkk\n",
+        "\n",
+        "01:33:36\tCristiane E Leite:\tAdoraria ter acesso ao SQL da empresa mas não tenho permissão rs. Porém todo aprendizado vale a pena, ainda mais com um Mestre como o Joviano, estou encantada com o método dele, quando eu crescer a culpa vai ser dele rs\n",
+        "\n",
+        "01:40:12\tMaurício Barros:\tCristiane, você pode pedir ao seu pessoal de TI para liberar uma base teste, não precisa ter todos os dados da empresa, apenas uma parte, e deixar sua imaginação voar.\n",
+        "\n",
+        "01:40:24\tCarlos Melo:\tApenas leitura\n",
+        "\n",
+        "01:40:37\tMaurício Barros:\tIsso.\n",
+        "\n",
+        "01:40:40\tCarlos Melo:\tEles ciram uma lcença que você não conseguiria alterar nada\n",
+        "\n",
+        "01:40:44\tCarlos Melo:\tou trabalhar em um dump\n",
+        "\n",
+        "01:40:51\tCarlos Melo:\tpedir um dump , ou amostra\n",
+        "\n",
+        "01:41:40\tMaurício Barros:\tVai fazer subselect?\n",
+        "\n",
+        "01:42:49\tCristiane E Leite:\tBoa meninos, vou tentar pedir essa amostra para o time de TI. Obg pela dica 👍\n",
+        "\n",
+        "01:46:37\tMaurício Barros:\tBoa técnica.\n",
+        "\n",
+        "01:51:08\tCarlos Melo:\tsim\n",
+        "\n",
+        "01:51:12\tJoviano Silveira:\t-----------------\n",
+        "\n",
+        "01:51:14\tJoviano Silveira:\t/* PREMISSAS\n",
+        "\n",
+        "- Dr Vitor pediu para filtrar\n",
+        "\n",
+        "- Sr Marcelo pediu no chamado #123456 alguma\n",
+        "\n",
+        "*/\n",
+        "\n",
+        "\n",
+        "\n",
+        "SELECT\n",
+        "\n",
+        "\n",
+        "\n",
+        "\tProd.ProductKey,\n",
+        "\n",
+        "\tProd.ProductAlternateKey,\n",
+        "\n",
+        "\tProd.ProductSubcategoryKey,\n",
+        "\n",
+        "\tProd.EnglishProductName,\n",
+        "\n",
+        "\tSub.EnglishProductSubcategoryName,\n",
+        "\n",
+        "\tCat.EnglishProductCategoryName\n",
+        "\n",
+        "\n",
+        "\n",
+        "FROM DimProduct Prod (NOLOCK)\n",
+        "\n",
+        "\n",
+        "\n",
+        "inner JOIN DimProductSubcategory Sub (NOLOCK) ON\n",
+        "\n",
+        "\tSub.ProductSubcategoryKey = Prod.ProductSubcategoryKey\n",
+        "\n",
+        "--\tand Sub.ProductSubcategoryKey <= 50\n",
+        "\n",
+        "\n",
+        "\n",
+        "LEFT JOIN DimProductCategory Cat (nolock) ON\n",
+        "\n",
+        "\tCat.ProductCategoryKey = Sub.ProductCategoryKey\n",
+        "\n",
+        "\n",
+        "\n",
+        "WHERE\n",
+        "\n",
+        "\tProd.ProductKey in (\n",
+        "\n",
+        "\n",
+        "\n",
+        "\t\t\t-- lista com os 5 ultimos produtos cadastrado\n",
+        "\n",
+        "\t\tselect top 5\n",
+        "\n",
+        "\t\t\tdp.ProductKey\n",
+        "\n",
+        "\t\tfrom DimProduct DP\n",
+        "\n",
+        "\t\torder by\n",
+        "\n",
+        "\t\t\tdp.ProductKey desc\n",
+        "\n",
+        "\n",
+        "\n",
+        "\t)\n",
+        "\n",
+        "01:52:35\tAbraços:\tObrigada Mestres!!\n",
+        "\n",
+        "01:52:44\tMaurício Barros:\tResponde a pergunta do Getúlio Pires:\n",
+        "\n",
+        "01:53:14\tBorges:\tMuito boa aula professor, parabéns...\n",
+        "\n",
+        "01:55:01\tCarlos Melo:\thehe\n",
+        "\n",
+        "01:55:02\tMaurício Barros:\tInfelizmente, não!\n",
+        "\n",
+        "01:55:36\tCristiane E Leite:\tnãm\n",
+        "\n",
+        "01:58:20\tFelipe Santos:\tQuando essa data não existe eu até crio kkk\n",
+        "\n",
+        "01:58:30\tMaurício Barros:\tMeus comprovantes de pagamento são arquivados dessa forma. hehehehe\n",
+        "\n",
+        "02:03:47\tCristiane E Leite:\tJoviano é bichão nesse conhecimento\n",
+        "\n",
+        "02:04:59\tMaurício Barros:\tCarlos, coloca aqui suas redes, por favor.\n",
+        "\n",
+        "02:05:15\tCarlos Melo:\thttp://instagram.com/carlos_melo.py/\n",
+        "\n",
+        "02:05:27\tCarlos Melo:\thttp://youtube.com/c/CarlosMeloSigmoidal/videos\n",
+        "\n",
+        "02:05:33\tMaurício Barros:\tvlw\n",
+        "\n",
+        "02:05:53\tMaurício Barros:\t#naosouperu\n",
+        "\n",
+        "02:06:10\tFelipe Santos:\t#naosouperu\n",
+        "\n",
+        "02:06:41\tAlessandra Antonieli:\t#naosouperu\n",
+        "\n",
+        "02:06:51\tMaurício Barros:\tBoa noie!\n",
+        "\n",
+        "02:06:55\tCarlos Melo:\tpode sair\n",
+        "\n",
+        "02:06:58\tCarlos Melo:\tvc e host\n",
+        "\n",
+        "02:07:00\tCarlos Melo:\té\n",
+        "\n",
+        "02:07:07\tclaudio ferreira:\tVlw muito obrigado!!!"
+      ],
+      "metadata": {
+        "id": "16eZh78TYqAU"
       }
     }
   ]
